[gd_scene load_steps=48 format=3 uid="uid://b3tgy38rb4a8p"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_ngdcq"]
[ext_resource type="Texture2D" uid="uid://cb8rbuihiuco6" path="res://art/Legacy-Fantasy/Character/Idle/Idle-Sheet.png" id="2_c78ph"]
[ext_resource type="Texture2D" uid="uid://0f4ckddvmngd" path="res://art/Legacy-Fantasy/Character/Attack-01/Attack-01-Sheet.png" id="3_12307"]
[ext_resource type="Texture2D" uid="uid://b5njtoqq7nv6h" path="res://art/Legacy-Fantasy/Character/Run/Run-Sheet.png" id="3_e2k0y"]
[ext_resource type="Script" path="res://scenes/stats/attack_stats.gd" id="3_sjfsi"]
[ext_resource type="Script" path="res://scenes/stats/movement_stats.gd" id="4_qtbgm"]
[ext_resource type="PackedScene" uid="uid://10cog181cq5u" path="res://scenes/melee_attack_zone.tscn" id="5_lxc2d"]
[ext_resource type="Script" path="res://scenes/stats/health_stats.gd" id="6_bwcow"]
[ext_resource type="PackedScene" uid="uid://wti6ha7f70jd" path="res://scenes/item_pickup_zone.tscn" id="7_7edtu"]
[ext_resource type="Texture2D" uid="uid://b857yt8fb7tm1" path="res://art/Legacy-Fantasy/Character/Jumlp-All/Jump-All-Sheet.png" id="9_3yg04"]
[ext_resource type="Shader" uid="uid://b424xgnciqpij" path="res://shaders/flash.tres" id="10_lmfyd"]
[ext_resource type="Script" path="res://scenes/state_machine/player_state_machine.gd" id="13_dq65y"]
[ext_resource type="Script" path="res://scenes/state_machine/iddle_state.gd" id="14_o03i1"]
[ext_resource type="Script" path="res://scenes/state_machine/running_state.gd" id="15_adgry"]
[ext_resource type="Script" path="res://scenes/state_machine/attacking_state.gd" id="16_asfev"]
[ext_resource type="Script" path="res://scenes/inventory.gd" id="17_g0vjp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d10ta"]
resource_local_to_scene = true
shader = ExtResource("10_lmfyd")
shader_parameter/Enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7auh"]
atlas = ExtResource("9_3yg04")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhy6l"]
atlas = ExtResource("2_c78ph")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_46l0k"]
atlas = ExtResource("2_c78ph")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr02i"]
atlas = ExtResource("2_c78ph")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_28oxo"]
atlas = ExtResource("2_c78ph")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2xka"]
atlas = ExtResource("3_12307")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2nb6"]
atlas = ExtResource("3_12307")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8w8a"]
atlas = ExtResource("3_12307")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsnfh"]
atlas = ExtResource("3_12307")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iuil"]
atlas = ExtResource("3_12307")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_agi65"]
atlas = ExtResource("3_12307")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n4mq"]
atlas = ExtResource("3_12307")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_frqtw"]
atlas = ExtResource("3_12307")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xwtw"]
atlas = ExtResource("3_e2k0y")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yypmg"]
atlas = ExtResource("3_e2k0y")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbobr"]
atlas = ExtResource("3_e2k0y")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1re4p"]
atlas = ExtResource("3_e2k0y")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n8i0"]
atlas = ExtResource("3_e2k0y")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8ssd"]
atlas = ExtResource("3_e2k0y")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ondwr"]
atlas = ExtResource("3_e2k0y")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_di20q"]
atlas = ExtResource("3_e2k0y")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_jblid"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7auh")
}],
"loop": false,
"name": &"defense",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhy6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46l0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr02i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28oxo")
}],
"loop": true,
"name": &"iddle",
"speed": 100.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2xka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2nb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8w8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsnfh")
}],
"loop": false,
"name": &"melee_1",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iuil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agi65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n4mq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frqtw")
}],
"loop": false,
"name": &"melee_2",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xwtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yypmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbobr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1re4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n8i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8ssd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ondwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di20q")
}],
"loop": true,
"name": &"running",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_jngtx"]
resource_name = "iddle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"iddle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_0auao"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"iddle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_im87b"]
resource_name = "deffense"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"defense"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pmq3g"]
resource_name = "melee_1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"melee_1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_it0an"]
resource_name = "melee_2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"melee_2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_x61a8"]
resource_name = "running"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"running"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yjvsg"]
_data = {
"RESET": SubResource("Animation_0auao"),
"deffense": SubResource("Animation_im87b"),
"iddle": SubResource("Animation_jngtx"),
"melee_1": SubResource("Animation_pmq3g"),
"melee_2": SubResource("Animation_it0an"),
"running": SubResource("Animation_x61a8")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yemya"]
height = 48.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("attack_stats", "health_stats", "movement_stats", "melee_attack_zone", "animated_sprite") groups=["Player"]]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 5
slide_on_ceiling = false
script = ExtResource("1_ngdcq")
attack_stats = NodePath("AttackStats")
health_stats = NodePath("HealthStats")
movement_stats = NodePath("MovementStats")
melee_attack_zone = NodePath("MeleeAttackZone")
animated_sprite = NodePath("AnimatedSprite2D")

[node name="HealthStats" type="Node" parent="."]
script = ExtResource("6_bwcow")
current_health = 50
max_defense = 30
current_defense = 30
defense_regeneration_per_sec = 5

[node name="AttackStats" type="Node" parent="."]
script = ExtResource("3_sjfsi")
basic_damage = 5.0
cooldown_time_sec = 0.3

[node name="MovementStats" type="Node" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("4_qtbgm")
character = NodePath("..")
max_speed = 300.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_d10ta")
sprite_frames = SubResource("SpriteFrames_jblid")
animation = &"iddle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_yjvsg")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_yemya")

[node name="MeleeAttackZone" parent="." node_paths=PackedStringArray("attack_stats") instance=ExtResource("5_lxc2d")]
position = Vector2(26.5, 0)
attack_stats = NodePath("../AttackStats")

[node name="ItemPickupZone" parent="." node_paths=PackedStringArray("player") instance=ExtResource("7_7edtu")]
position = Vector2(0, 13.5)
monitoring = true
player = NodePath("..")

[node name="DebugLabel" type="Label" parent="."]
visible = false
offset_left = -40.0
offset_top = -48.0
offset_right = 56.0
offset_bottom = -25.0

[node name="Sight" type="RayCast2D" parent="."]
position = Vector2(8, -8)
target_position = Vector2(24, 24)
collision_mask = 12

[node name="ActionTimer" type="Timer" parent="."]

[node name="Inventory" type="Node" parent="."]
script = ExtResource("17_g0vjp")

[node name="PlayerStateMachine" type="Node" parent="."]
script = ExtResource("13_dq65y")

[node name="IddleState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("sight", "attacking_state", "running_state")]
script = ExtResource("14_o03i1")
sight = NodePath("../../Sight")
attacking_state = NodePath("../AttackingState")
running_state = NodePath("../RunningState")

[node name="RunningState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("sight", "attacking_state", "iddle_state")]
script = ExtResource("15_adgry")
sight = NodePath("../../Sight")
attacking_state = NodePath("../AttackingState")
iddle_state = NodePath("../IddleState")

[node name="AttackingState" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("sight", "attack_stats", "iddle_state", "running_state")]
script = ExtResource("16_asfev")
sight = NodePath("../../Sight")
attack_stats = NodePath("../../AttackStats")
iddle_state = NodePath("../IddleState")
running_state = NodePath("../RunningState")
